force-app/main/default/objects/MCA__c.object
<CustomObject>
    <fields>
        <fullName>AC_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required</inlineHelpText>
        <label>AC File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Assigned_User__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Assigned_User__c</referenceTo>
        <relationshipLabel>Step 29: MCA &amp; Final Document Handover</relationshipLabel>
        <relationshipName>Step_29_MCA_Final_Document_Handover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HOC_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required</inlineHelpText>
        <label>HOC File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWaitingForPreviousStep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWaitingForPreviousStep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required</inlineHelpText>
        <label>MCC File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, &quot;MCA &amp; Final Document Handover&quot;, &quot;_self&quot;)</formula>
        <label>Work Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>29</defaultValue>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLMS_URL__c</fullName>
        <defaultValue>&quot;https://punchlist.thaioilgroup.com&quot;</defaultValue>
        <label>PLMS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>MCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected User is not SME. Please select SME user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>PM</value>
            </filterItems>
            <infoMessage>Please select SME user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_29_MCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_Status__c</fullName>
        <label>Submit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submit_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Process_Status__c</fullName>
        <label>Work Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Process_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Step 29 : MCA &amp; Final Document Handover</label>
    <nameField>
        <displayFormat>WP29-{00000}</displayFormat>
        <label>Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Step_29_After_Submit</fullName>
        <active>true</active>
        <label>Step 29 : After Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step_29_Before_Submit</fullName>
        <active>true</active>
        <label>Step 29 : Before Submit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>